# PROPAPI

./: .env.example  .gitignore  README.md  REAPI.code-workspace  REAPI_PRD_v1.1.md  brand name candidate.md  docker-compose.yml  ブランド命名の音声学的・心理学的法則リサーチ.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
.obsidian/: community-plugins.json
api/: alembic.ini  pyproject.toml  seed_prod_key.py  seed_test_key.py  test_api_live.py
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  002_add_land_price.py  003_add_stripe_fields.py  004_rename_plans_to_business_plan.py  005_rename_free_to_flex.py  006_fix_sequences.py
api/app/: config.py  database.py  dependencies.py  main.py
api/app/models/: __init__.py  address.py  auth.py  base.py  data_source.py  hazard.py  land_price.py  school_district.py  usage.py  zoning.py
api/app/routers/: admin.py  auth.py  batch.py  billing.py  dashboard.py  hazard.py  health.py  inspect.py  zoning.py
api/app/schemas/: batch.py  errors.py  hazard.py  inspect.py  land_price.py  school_district.py  zoning.py
api/app/services/: billing.py  cache.py  geocoder.py  rate_limiter.py  scoring.py  spatial.py  stripe_service.py
api/app/utils/: address_normalizer.py
api/tests/: test_address_normalizer.py  test_auth.py  test_billing.py  test_cache.py  test_geocoder.py  test_hazard.py  test_health.py  test_inspect.py  test_rate_limiter.py  test_scoring.py  test_security.py  test_spatial.py  test_zoning.py
docker/: api.Dockerfile  api.prod.Dockerfile  web.Dockerfile
etl/: DATA_DOWNLOAD_GUIDE.md  __init__.py  config.py  requirements.txt
etl/common/: __init__.py  db.py  geo.py  loader.py  quality.py
etl/scripts/: __init__.py  check_data.py  load_address.py  load_flood.py  load_land_price.py  load_landslide.py  load_school_district.py  load_tsunami.py  load_zoning.py
etl/tests/: test_config.py  test_geo.py  test_loaders.py  test_quality.py
infra/terraform/: main.tf  outputs.tf  variables.tf
mcp/: README.md  pyproject.toml
mcp/src/propapi_mcp/: __init__.py  server.py
planning/: API仕様書.md  GTM実行計画.md  _INDEX.md  インフラ・セキュリティ設計.md  システムアーキテクチャ.md  データ戦略.md  ビジネスプラン.md  ユーザーストーリー.md  実装ロードマップ.md  財務モデル.md
sdk/python/: README.md  pyproject.toml
sdk/python/src/propapi/: __init__.py  client.py  exceptions.py  models.py  py.typed
sdk/python/tests/: test_async_client.py  test_client.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: client.ts  errors.ts  index.ts  types.ts
sdk/typescript/tests/: client.test.ts
web/: next.config.js  package.json  tsconfig.tsbuildinfo
web/src/app/: layout.tsx  page.tsx
web/src/app/area/[prefecture]/[city]/: page.tsx
web/src/app/docs/: page.tsx
web/src/app/privacy/: page.tsx
web/src/app/search/: page.tsx
web/src/app/terms/: page.tsx
web/src/components/: ApiPromoBanner.tsx  HazardMap.tsx  SearchForm.tsx
web/src/lib/: api.ts  types.ts
