[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "propapi"
version = "0.1.0"
description = "PropAPI Python SDK — 土地リスク調査 API クライアント"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "PropAPI", email = "admin@propapi.jp" }]
keywords = ["propapi", "hazard", "zoning", "real-estate", "japan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.24,<1"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "respx>=0.20"]

[project.urls]
Homepage = "https://propapi.jp"
Documentation = "https://api.propapi.jp/docs"
Repository = "https://github.com/Ryumii/REAPI"

[tool.hatch.build.targets.wheel]
packages = ["src/propapi"]
